k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: intern
spec:
  selector:
    app: web
  ports:
    - port: 5000
      targetPort: 5000
